Hide entire altmetric section when the score is 0 to avoid white space change
https://github.com/elifesciences/enhanced-preprints-issues/issues/1266

--- a/src/components/molecules/article-status/article-status.scss
+++ b/src/components/molecules/article-status/article-status.scss
@@ -168,7 +168,7 @@
   @include typography.font-size-and-vertical-height(14, 26);
 }
 
-.altmetric-hidden + .altmetric-small-section__text,
-.altmetric-embed:empty + .altmetric-small-section__text {
+.altmetric-small-section:has(.altmetric-hidden),
+.altmetric-small-section:has(.altmetric-embed:empty) {
   display: none;
 }
